Make QueryMessageSender receive an asset list