@@ -1,19 +1,14 @@
 package org.eclipse.dataspaceconnector.ids.api.catalog;
 
 import de.fraunhofer.iais.eis.DynamicAttributeTokenBuilder;
-import de.fraunhofer.iais.eis.QueryLanguage;
 import de.fraunhofer.iais.eis.QueryMessageBuilder;
-import de.fraunhofer.iais.eis.QueryScope;
-import org.easymock.EasyMock;
 import org.eclipse.dataspaceconnector.ids.spi.daps.DapsService;
 import org.eclipse.dataspaceconnector.spi.iam.ClaimToken;
 import org.eclipse.dataspaceconnector.spi.iam.VerificationResult;
-import org.eclipse.dataspaceconnector.spi.types.TypeManager;
-import org.eclipse.dataspaceconnector.spi.types.domain.metadata.DataEntry;
+import org.eclipse.dataspaceconnector.spi.types.domain.asset.Asset;
 import org.junit.jupiter.api.Test;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -36,9 +31,9 @@ class CatalogQueryControllerTest {
         ClaimToken claimToken = ClaimToken.Builder.newInstance().build();
         expect(dapsService.verifyAndConvertToken("token"))
                 .andReturn(new VerificationResult(claimToken));
-        DataEntry dataEntry = DataEntry.Builder.newInstance().id("anId").build();
+        var asset = Asset.Builder.newInstance().id("anId").build();
         expect(queryEngine.execute(anyString(), eq(claimToken), anyString(), eq("queryLanguage"), eq("query")))
-                .andReturn(Arrays.asList(dataEntry));
+                .andReturn(List.of(asset));
         replay(dapsService, queryEngine);
         var queryMessage = new QueryMessageBuilder()
                 ._issuerConnector_(URI.create("http://localhost:8182"))
@@ -50,7 +45,7 @@ class CatalogQueryControllerTest {
         var response = queryController.query(queryMessage);
 
         assertThat(response.getStatus()).isEqualTo(200);
-        List<DataEntry> result = (List<DataEntry>) response.getEntity();
-        assertThat(result).containsOnly(dataEntry);
+        List<Asset> result = (List<Asset>) response.getEntity();
+        assertThat(result).containsOnly(asset);
     }
 }
